src/test/deca/codegen/invalid/div00.deca
// Description:
//    Division du float 0 par 0
//
// Resultats:
//    Erreur : Une opération a dépassé la capacité maximale des flottants.
//

{
   float i = 0.0;
   i = i/0;
}

